--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <img style="border-radius: 20%; float: left; margin-right: 1em;" src="images/A.Ugo picture.jpg" alt="picture of Anthony Ugo" radius="50%" aline="left"></a>
     </div>
     <h2>About</h2>
-    <p>Passionate about the art and science of web developement, Anthony recognizes that the internet is a crossroads</p>
+    <p>Passionate about the art and science of web development, Anthony recognizes that the internet is a crossroads</p>
     <p> > >   >   >   >>  >>> >>> >  Where Culture, Commerce, Code & Communication are integrated into a seemless dance of style.</p>
-    <p>As global villigers learn the language of electronic literacy, we celebrate that history ends in hypertext.</p>
+    <p>As global villagers learn the language of electronic literacy, we celebrate the notion that history ends in hypertext.</p>
     <br>
     <br>
             <ul>
