added job to resume

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </div>
     <h2>About</h2>
     <p>Passionate about the art and science of web development, Anthony recognizes that the internet is a crossroads</p>
-    <p> > >   >   >   >>  >>> >>> >  Where Culture, Commerce, Code & Communication are integrated into a seemless dance of style.</p>
-    <p>As global villagers learn the language of electronic literacy, we celebrate the notion that history ends in hypertext.</p>
+    <p> >   >>  >>> >>> >  [[ \/\/HerE ]] Culture, Commerce, Code & Communication are integrated into a seamless dance of style.</p>
+    <p>As global villagers learn the language of electronic literacy, \/\/e celebrate the notion that history ends in hypertext.</p>
     <br>
     <br>
             <ul>
