--- a/resume .html
+++ b/resume .html
@@ -46,19 +46,19 @@
                 <h3>Excel Forms & Graphics </h3>
                 <p><em>Account Manager</em></p>
                 <span class="place">Des Plaines, IL</span>
-                <span class="location">2015-2019</span>
+                <span class="location">[2015-2019]</span>
             </header>
             <div>
                 <ul>
-                <li>Graphic design on brochures and booklets.</li>
-                    <li>Product Development: arranged artwork and copy; reviewed proofs layouts on checks, forms and labels. </li>
-                    <li>Operated Excel Forms and Graphics accounting system using (Oracle equivalent) e-Quantum software program.</li>
-                    <li>AP/AR and Invoicing: balanced books, processed monthly billing cycles.</li>
-                    <li>Sales Representative: customer service and product consultant for various clients.</li>
-                    <li>Coordinated vendor relations: resourced printers and materials; negotiated pricing; set up orders.</li>
-                    <li>Warehouse Manager: monitored inventory levels; sales items, stocks and supplies.</li>
-                    <li>Order fulfillment on warehouse releases - shipping, receiving and scheduling.</li>
-                    <li> Coordinated variable data mailings.</li>
+                <li>Graphic design on brochures and booklets</li>
+                    <li>Product Development: arranged artwork and copy; reviewed proofs layouts on checks, forms and labels</li>
+                    <li>Operated Excel Forms and Graphics accounting system using (Oracle equivalent) e-Quantum software program</li>
+                    <li>AP/AR and Invoicing: balanced books, processed monthly billing cycles</li>
+                    <li>Sales Representative: customer service and product consultant for various clients</li>
+                    <li>Coordinated vendor relations: resourced printers and materials; negotiated pricing; set up orders</li>
+                    <li>Warehouse Manager: monitored inventory levels; sales items, stocks and supplies</li>
+                    <li>Order fulfillment on warehouse releases - shipping, receiving and scheduling</li>
+                    <li> Coordinated variable data mailings</li>
                 </ul>
                 </div>
             </div>
@@ -74,15 +74,15 @@
                 <h3>Pharmichem Testing Services, INC</h3>
                 <p><em>Administrative Assistant</em></p>
                 <span class="place">Tinley Park, IL</span>
-                <span class="location">2014</span>
+                <span class="location">[2014]</span>
             </header>
             <div>
                 <ul>
-                <li>Invoiced all completed lab work; closed weekly billing cycles.</li>
-                <li>Data entry: logged test results and tracked samples in Pharmichem system.</li>
-                <li>Performed routine clerical duties - telephone, typing, postage meter and fax.</li>
-                <li>Reviewed and revised SOP; updated codes and methods.</li>
-                <li>Received samples in compliance with guidelines for handling dangerous goods, controlled substances and cytotoxic compounds.</li>
+                <li>Invoiced all completed lab work; closed weekly billing cycles</li>
+                <li>Data entry: logged test results and tracked samples in Pharmichem system</li>
+                <li>Performed routine clerical duties - telephone, typing, postage meter and fax</li>
+                <li>Reviewed and revised SOP; updated codes and methods</li>
+                <li>Received samples in compliance with guidelines for handling dangerous goods, controlled substances and cytotoxic compounds</li>
                 </ul>
             </div>
             </div>
@@ -97,14 +97,34 @@
             <header>
                 <h3>Landscape/Construction</h3>
                 <span class="place">Sebastopol, CA</span>
-                <span class="location">2006-2014</span>
+                <span class="location">[2006-2014]</span>
             </header>
             <div>
                 <ul>
-                <li>Worked as a self-employed landscaper and independent construction worker.</li>
-                <li>Assisted in property maintenance for 2 homes and 3 acres of farmland.</li>
+                <li>Worked as a self-employed landscaper and independent construction worker</li>
+                <li>Assisted in property maintenance for 2 homes and 3 acres of farmland</li>
                 </ul>
                 </div>
+            </div>
+            <header>
+                <h3>Revenue Production Management, Des Plaines, IL</h3>
+                <p><em>Reimbursement Analyst</em></p>
+                <span class="place">Des Plaines, IL</span>
+                <span class="location">[2001-2006]</span>
+            </header>
+            <div>
+                <ul>
+                <li>Combined research &amp; analysis to establish context regarding medical claims &amp; insurance coverage, helping to resolve disputes involving
+                    third party &amp; single payer responsibility</li>
+                <li>Maintained client relations with seven hospitals; facilitated financial planning with care coordinators, social workers, hospital accounting &amp;
+                    RPM office</li>
+                <li>Provided long term customer service, while implementing integrative medical and financial strategies based on patient needs.</li>
+                <li>Reviewed and revised SOP; updated codes and methods</li>
+                <li>Screened and interviewed persons in need of medical assistance; determined eligibility for financial aid; compiled and formatted
+                    supporting documentation for Medicaid application process</li>
+                    <li>Arranged outside funding for patient care</li>
+                </ul>
+            </div>
             </div>
         </section>
         </section>
@@ -126,7 +146,7 @@
             
             <div>
                 <ul>
-                <li>Modernist styled tribute page celebrating the genius of Jean Gebser.</li>
+                <li>Modernist styled tribute page celebrating the genius of Jean Gebser</li>
                 </ul>
             </div>
             </div>
@@ -144,8 +164,8 @@
             </header>
             <div>
                 <ul>
-                <li>A project exploring a new technology which transforms images into interactive surfaces.</li>
-                <li>Impactful, artistic, multidimensional; image as pun.</li>
+                <li>A project exploring a new technology which transforms images into interactive surfaces</li>
+                <li>Impactful, artistic, multidimensional; image as pun</li>
                 </ul>
             </div>
             </div>
