--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/YOUR_EMAIL_HERE" method="post">
-    <fieldset id="fs-frm-inputs">
+  <link rel="stylesheet" type="text/css" href="dist/css/main.css">
+  <fieldset id="fs-frm-inputs">
       <label for="full-name">Full Name</label>
       <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
       <label for="email-address">Email Address</label>
