--- a/resume .html
+++ b/resume .html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>A Ugo Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Microtrain1912 Hello page">
-    <meta name="keywords" content="microtrain1912, welcome, resume, contact">
-  </head>
+    <meta name="home page" content="Anthony Ugo">
+    <meta name="web design" content="resume, contact"> 
+    <link rel="stylesheet" type="text/css" href="./dist/css/main.min.css>
   <body lang="en">
         <nav>
             <ul>
