--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,34 @@
-<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/YOUR_EMAIL_HERE" method="post">
-  <link rel="stylesheet" type="text/css" href="dist/css/main.css">
-  <fieldset id="fs-frm-inputs">
-      <label for="full-name">Full Name</label>
-      <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
-      <label for="email-address">Email Address</label>
-      <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Contact Form</title>
+</head>
+<body>
+    <form action="https://formspree.io/anthonyugo@gmail.com" method="POST">
+      <input type="hidden" name="_next" value="//aU.github.io/thanks.html">
+    </form>
+
+    <div>
+    <label for="name">Name</label>
+    <input id="name" type="text" name="name">
+    </div>
+    <div>
+      <label for="email">Email</label>
+      <input id="email" type="text" name="_replyto">
+    </div>
+    <div>
       <label for="message">Message</label>
-      <textarea rows="5" name="message" id="message" placeholder="Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla nullam quis risus." required=""></textarea>
-      <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
-    </fieldset>
-    <p><br></p>
-    <input type="submit" value="Submit">
-    <p><br><a href="index.html">Home</a></p>
-  </form>
+      <textarea id="message" name="message"></textarea>
+    </div>
+    <div>
+      <input type="hidden" name="_subject" value="New submission!">
+    </div>
+    <div>
+      <input type="submit" value="Send">
+
+    </div>
+</body>
+</html>
