fixed scss into css

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
   <title>Contact Form</title>
 </head>
 <body>
+
     <form action="https://formspree.io/anthonyugo@gmail.com" method="POST">
       <input type="hidden" name="_next" value="//aU.github.io/thanks.html">
     </form>
@@ -16,10 +17,12 @@
     <input id="name" type="text" name="name">
     </div>
     <div>
+      <br>
       <label for="email">Email</label>
       <input id="email" type="text" name="_replyto">
     </div>
     <div>
+      <br>
       <label for="message">Message</label>
       <textarea id="message" name="message"></textarea>
     </div>
@@ -27,8 +30,11 @@
       <input type="hidden" name="_subject" value="New submission!">
     </div>
     <div>
+      <br>
       <input type="submit" value="Send">
-
     </div>
+  <br>
+    <a href="index.html">Home</a>
+  
 </body>
 </html>
