--- a/resume .html
+++ b/resume .html
@@ -5,8 +5,10 @@
     <title>A Ugo Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="home page" content="Anthony Ugo">
-    <link rel="stylesheet" type="text/css" href="./dist/css/main.min.css"> 
-    <header>
+    <link rel="stylesheet" type="text/css" href="./dist/css/main.css"> 
+    </head>
+    <body>
+        <header>
             <a id="toggleMenu">Menu<a>
         <span class="logo">My WebSite</span>
         <nav>
@@ -18,7 +20,7 @@
         </nav>
       </header>
         
-    <section id="main">
+    <main id="main">
 
         <h1>Anthony J Ugo</h1>
         <h2>
@@ -170,5 +172,6 @@
             <li>Angular</li>
         </ul>
         </section>
+        </main>
     </body>
 </html>
