--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Home Page" content="Portfolio">
     <meta name="Anthony Ugo"  content="Web Development">
-    <link rel="stylesheet" type="text/css" href="./dist/css/main.min.css"> 
+    <link rel="stylesheet" type="text/css" href="./dist/css/main.css"> 
     <header>
+      <div>
             <a id="toggleMenu">Menu<a>
         <span class="logo">My WebSite</span>
         <nav>
@@ -17,13 +18,16 @@
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
+      </div>
       </header>
     <title>Anthony Ugo Resume</title>
 </head>
 <body>
+  <br>
+  <br>
     <h1><center>Anthony J Ugo</center></h1>
     <div align="center">
-   <img src="images/Pictoglyphic Guitar.jpg" alt="Pictogliphic Guitar" width="1100" height="600">
+   <img src="images/Pictoglyphic Guitar.jpg" alt="Pictogliphic Guitar" width="1100" height="600" class="responsive">
     </div>
     <div align="left">
     <img style="border-radius: 20%; float: left; margin-right: 1em;" src="images/A.Ugo picture.jpg" alt="picture of Anthony Ugo" radius="50%" aline="left"></a>
