added css styling

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
       <div>
             <a id="toggleMenu">Menu<a>
-        <span class="logo">My WebSite</span>
+        <span class="logo"><img src="images/radio.jpg" alt="radio wave"></span>
         <nav>
-          <ul>
+          <ul id=menu>
             <li><a href="index.html">Home</a></li>
             <li><a href="resume .html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -25,19 +25,26 @@
 <body>
   <br>
   <br>
-    <h1><center>Anthony J Ugo</center></h1>
+    <h1 id="name">Anthony J Ugo</h1>
+    <br>
     <div align="center">
-   <img src="images/Pictoglyphic Guitar.jpg" alt="Pictogliphic Guitar" width="1100" height="600" class="responsive">
+      <img src="images/Pictoglyphic Guitar.jpg" alt="Pictogliphic Guitar" width="1100" height="600" class="responsive">
     </div>
-    <div align="left">
+    <div id="photo">
     <img style="border-radius: 20%; float: left; margin-right: 1em;" src="images/A.Ugo picture.jpg" alt="picture of Anthony Ugo" radius="50%" aline="left"></a>
-    </div>
-    <h2>About</h2>
-    <p>Passionate about the art and science of web development, Anthony recognizes that the internet is a crossroads</p>
+  </div>
+<span class="leftbox"></span>
+<span class="around"></span>
+
+  <div class="about">
+      <h2>About</h2>
+  <br>
+    <p>Mixing passion with the art and science of web development, Anthony recognizes that the internet is a crossroads</p>
     <p> >   >>  >>> >>> >  [[ \/\/HerE ]] Culture, Commerce, Code & Communication are integrated into a seamless dance of style.</p>
     <p>As global villagers learn the language of electronic literacy, \/\/e celebrate the notion that history ends in hypertext.</p>
     <br>
     <br>
+    </div>
     <script>
             var toggleMenu = document.getElementById('toggleMenu');
             var nav = document.querySelector('nav');
