changed responsive css - added responsive menu to resume

--- a/resume .html
+++ b/resume .html
@@ -187,5 +187,20 @@
             <li><i class="phone"></i>773.425.1520 </li>
         </ul>
         </main>
+        <script>
+            var toggleMenu = document.getElementById('toggleMenu');
+            var nav = document.querySelector('nav');
+            toggleMenu.addEventListener(
+              'click',
+              function(){
+                if(nav.style.display=='block'){
+                  nav.style.display='none';
+                }else{
+                  nav.style.display='block';
+                }
+              }
+            );
+          </script>
+
     </body>
 </html>
