Added class projects to resume

--- a/resume .html
+++ b/resume .html
@@ -40,7 +40,7 @@
             <li>JavaScript</li>
             <li>LAMP Stack</li>
             <li>MEAN Stack</li>           
-            <li>Angular, Ionic & Express</li>
+            <li>Bootstrap & Ionic</li>
         </ul>
         <br>
         <hr size="3px" color="black">
@@ -126,21 +126,14 @@
             <hr size="3px" color="black">
 
         <!--Selected Projects-->
-        <h2> Selected Projects </h2>
+<br>
+
+        <h2> <u>Selected Projects</u></h2>
 
         <p></p>
-        <p><span class="company">Bootstrap Project</span>
-            <br>
-                <span class="place">2020</span>
-                <br>
-                <br>
-                <span class="links"><a href="https://augo10.github.io/bootstrap/">Github</a></span>
-                <br>
-                <br>
-                <span class="place">Artful Carousel of Pictoglyphs & Logos</span></p>
+        
 
-
-          <p><span class="company">Jean Gebser Tribute Page</span>
+          <p><span class="company">Tribute Page</span>
             <br>
                 <span class="place">2019</span>
                 <br>
@@ -161,6 +154,51 @@
                 <br>
                 <span class="place">A project exploring a new technology which transforms images into interactive surfaces
                 Impactful, artistic, multidimensional; image as pun</span></p>
+
+                <br>
+
+                <h3><span class="lab"><u>Class Labwork & Exercises</u></span></h3>
+
+                    <p><span class="company">Carousel</span>
+                        <br>
+                            <span class="place">2020</span>
+                            <br>
+                            <br>
+                            <span class="links"><a href="https://augo10.github.io/bootstrap/">Github</a></span>
+                            <br>
+                            <br>
+                            <span class="place">Assortment of Pictoglyphs & Logos </span></p>
+
+                    <p><span class="company">Draw</span>
+                    <br>
+                        <span class="place">2020</span>
+                        <br>
+                        <br>
+                        <span class="links"><a href= "https://augo10.github.io/draw/.">Github</a></span>
+                        <br>
+                        <br>
+                        <span class="place">Colorful Drawing Palette </span></p>
+
+                        <p><span class="company">Game </span>
+                            <br>
+                                <span class="place">2020</span>
+                                <br>
+                                <br>
+                                <span class="links"><a href= " https://augo10.github.io/game/">Github</a></span>
+                                <br>
+                                <br>
+                                <span class="place">Old School Digital Challenge</span></p>
+
+                                <p><span class="company"> NASA - APOD </span>
+                                    <br>
+                                        <span class="place">2020</span>
+                                        <br>
+                                        <br>
+                                        <span class="links"><a href= "https://augo10.github.io/apod-vanilla/.">Github</a></span>
+                                        <br>
+                                        <br>
+                                        <span class="place">NASA Photo of the Day</span></p>        
+
                 
                 <hr size="3px" color="black">
 
@@ -168,7 +206,7 @@
             <h2> Education </h2>
             <p><span class="company">DePaul University</span>
                 <br>
-            <span class="job">Bachelor in English</span>
+            <span class="job">Bachelor of Arts - English Literature </span>
             <br>
             <br>
              <span class="company">MicroTrain Technologies </span>
