--- a/resume .html
+++ b/resume .html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <a id="toggleMenu">Menu<a>
-                <span class="logo"><img src="images/Hypertext RadiO Icon .jpg" alt="radio wave"></span>
+                <span class="logo"><img src="images/Hypertext Radio Icon 2.jpg" alt="radio wave"></span>
                 <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
