added revised icon logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div>
             <a id="toggleMenu">Menu<a>
-        <span class="logo"><img src="images/Hypertext Radio Icon 2.jpg" alt="radio wave"></span>
+        <span class="logo"><img src="images/Hypertext Radio Icon .jpg" alt="radio wave"></span>
         <nav>
           <ul id=menu>
             <li><a href="index.html">Home</a></li>
