Added Scrum + updated resume w/ Linkedin

--- a/resume .html
+++ b/resume .html
@@ -214,16 +214,26 @@
                 <span class="year">2019-2020</span>
             <span class="job">Full Stack Web Designer &ndash; Hybrid Mobile Development</span>
             <br>
+
         <div>
                 <ul>
                 <li>HTML, CSS, SCSS</li>
                 <li>JavaScript</li>
                 <li>jQuery, Bootstrap, NPM & Ionic</li>
-                <li>Linux, Apache, MySqQl, PHP </li>
-                <li>Mongo DB, Express, AngularJS, Nodejs</li>
+                <li>Linux, Apache, MySQL, PHP </li>
+                <li>Mongo DB, Express, Angular, Node.js</li>
                   
             </ul>
         </div>
+            <h2>Certification</h2>
+            <p><span class="company">Certified ScrumMaster (CSM)</span>
+                <br>
+                <span class="job">Scrum Alliance</span>
+                <span class="year">2/10/2020</span> 
+                <br>
+                <span class="job">Certificant ID: 001045444</span>  
+                <br>
+                <img src="images/seal-csm.png" alt="scrumseal" width="70" height="70" class="responsive">
          <br>   
         <hr size="3px" color="black">
             <!--Contact Info-->
@@ -231,12 +241,8 @@
         <h2>
             Contact Info
         </h2>
-        <ul>
-            <li><i class="email"></i> anthonyugo@microtrain.net</li>
-            <li><i class="linkedin"></i> https://www.linkedin.com/in/anthony-ugo-4799321a0/</li>
-            <li><i class="microtrain-email"></i> anthonyugo@microtrain.net</li>
-            <li><i class="phone"></i>773.425.1520 </li>
-        </ul>
+        <span class="links"><a href= "https://www.linkedin.com/in/anthony-ugo-4799321a0/">Linkedin</a></span>
+        
         </main>
         <script>
             var toggleMenu = document.getElementById('toggleMenu');
