Added items to resume

--- a/resume .html
+++ b/resume .html
@@ -41,6 +41,8 @@
             <li>LAMP Stack</li>
             <li>MEAN Stack</li>           
             <li>Bootstrap & Ionic</li>
+            <li>AWS & Linux</li>
+            <li>MVC & API</li>
         </ul>
         <br>
         <hr size="3px" color="black">
@@ -220,7 +222,7 @@
                 <li>HTML, CSS, SCSS</li>
                 <li>JavaScript</li>
                 <li>jQuery, Bootstrap, NPM & Ionic</li>
-                <li>Linux, Apache, MySQL, PHP </li>
+                <li>Linux, Apache, MySQL, AWS, PHP </li>
                 <li>Mongo DB, Express, Angular, Node.js</li>
                   
             </ul>
@@ -242,7 +244,8 @@
             Contact Info
         </h2>
         <span class="links"><a href= "https://www.linkedin.com/in/anthony-ugo-4799321a0/">Linkedin</a></span>
-        
+        <br>
+        <br>
         </main>
         <script>
             var toggleMenu = document.getElementById('toggleMenu');
