--- a/resume .html
+++ b/resume .html
@@ -28,21 +28,22 @@
         <h1>Anthony J Ugo</h1>
         <hr size="8px" color="black">
         <h2> Summary &amp; Skills</h2>
-        <p>Creative, detail oriented and inspired professional with experience in graphic design, retail forms and company logos. Combining a
+        <p>Creative, detail oriented and inspired professional with experience in design, retail forms and company logos. Combining a
                 superior aesthetic sensibility with an integral business approach, grounded in full spectrum life experience. A superior artistic imagination
                 augmented with insight based analytical reasoning, woven into a clear communication style.</p>
        
     <ul id="summaryskills">
-            <li>Adobe InDesign & Illustrator</li>
-            <li>Microsoft Offise Suite</li>
-            <li>E-Quantum</li>
-            <li>HTML/CSS/SCSS</li>
+
+            <li>HTML, CSS, SCSS</li>
             <li>JavaScript</li>
             <li>LAMP Stack</li>
             <li>MEAN Stack</li>           
             <li>Bootstrap & Ionic</li>
-            <li>AWS & Linux</li>
-            <li>MVC & API</li>
+            <li>AWS</li>
+            <li>MVC & REST API</li>
+            <li>Adobe InDesign & Illustrator</li>
+            <li>Microsoft Offise Suite</li>
+            <li>E-Quantum</li>
         </ul>
         <br>
         <hr size="3px" color="black">
@@ -98,7 +99,7 @@
             <div>
                 <ul>
                 <li>Worked as a self-employed landscaper and independent construction worker</li>
-                <li>Assisted in property maintenance for 2 homes and 3 acres of farmland</li>
+                <li>Assisted in property maintenance for 2 homes and 5 acres of farmland</li>
                 </ul>
                 </div>
             </div>
@@ -222,7 +223,7 @@
                 <li>HTML, CSS, SCSS</li>
                 <li>JavaScript</li>
                 <li>jQuery, Bootstrap, NPM & Ionic</li>
-                <li>Linux, Apache, MySQL, AWS, PHP </li>
+                <li>Linux, Apache, MySQL, PHP </li>
                 <li>Mongo DB, Express, Angular, Node.js</li>
                   
             </ul>
