Added link to resume

--- a/resume .html
+++ b/resume .html
@@ -135,6 +135,16 @@
 
         <p></p>
         
+        <p><span class="company">Global Window News App</span>
+            <br>
+                <span class="place">2020</span>
+                <br>
+                <br>
+                <span class="links"><a href="https://master.dwbvarfevsydi.amplifyapp.com">Angular-MDB-AWS</a></span>
+                <br>
+                <br>
+                <span class="place">Instant access to 82 publications, in a daily spin through the global news cycle</span></p>
+
 
           <p><span class="company">Tribute Page</span>
             <br>
