removed contact page - added portifolio page + favicons

--- a/index.html
+++ b/index.html
@@ -6,33 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Home Page" content="Portfolio">
     <meta name="Anthony Ugo"  content="Web Development">
-    <link rel="stylesheet" type="text/css" href="./dist/css/main.css"> 
+    <link rel="stylesheet" type="text/css" href="./dist/css/main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <header>
       <div>
             <a id="toggleMenu">Menu<a>
-        <span class="logo"><img src="images/Hypertext Radio Icon .jpg" alt="radio wave"></span>
+        <span class="logo"><img src="images/Hypertext Radio Icon .jpg" alt="radio wave" style="max-width: 100%;height: auto" class="responsive"></span>
         <nav>
           <ul id=menu>
             <li><a href="index.html">Home</a></li>
             <li><a href="resume .html">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <!--<li><a href="contact.html">Contact</a></li>-->
           </ul>
         </nav>
       </div>
+      <br>
       </header>
-    <title>Anthony Ugo Resume</title>
+    <title>Anthony Ugo</title>
 </head>
 <body>
   <br>
   <br>
+  <br>
+  <br>
     <h1 id="name">Anthony J Ugo</h1>
-    <br>
+    
     <div align="center">
       <img src="images/Pictoglyphic Guitar.jpg" alt="Pictogliphic Guitar" width="1100" height="600" class="responsive">
     </div>
     <div id="photo">
-    <img style="border-radius: 20%; float: left; margin-right: 1em;" src="images/A.Ugo picture.jpg" alt="picture of Anthony Ugo" radius="50%" aline="left"></a>
+    <img style="border-radius: 20%; float: left; margin-right: 1em;" src="images/A.Ugo picture.jpg" alt="picture of Anthony Ugo" radius="50%" aline="left" class="responsive"></a>
   </div>
+  <br>
+  <br>
 <span class="leftbox"></span>
 <span class="around"></span>
 
