changed news app link on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
                 <span class="place">2020</span>
                 <br>
                 <br>
-                <span class="links"><a href="https://master.dwbvarfevsydi.amplifyapp.com">Angular-MDB-AWS</a></span>
+                <span class="links"><a href="https://news.dwbvarfevsydi.amplifyapp.com/">Angular-MDB-AWS</a></span>
                 <br>
                 <br>
                 <span class="place">Instant access to 82 publications, in a daily spin through the global news cycle</span>
