changed text on resume

--- a/resume .html
+++ b/resume .html
@@ -152,7 +152,7 @@
              <span class="company">MicroTrain Technologies </span>
                 <br>
                 <span class="year">2019-2020</span>
-            <span class="job">Full Stack Web Designer &ndash; Hybrid Mobile Development</span>
+            <span class="job">Agile Full Stack Web and Hybrid Mobile Application Development</span>
             <br>
 
         <div>
