modified text on resume & portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,11 +44,11 @@
                 <span class="place">2020</span>
                 <br>
                 <br>
-                <span class="links"><a href="https://news.dwbvarfevsydi.amplifyapp.com/">Angular-MDB-AWS</a></span>
+                <span class="links"><a href="https://master.dwbvarfevsydi.amplifyapp.com/">Angular-MDB-AWS</a></span>
                 <br>
                 <br>
                 <span class="place">Instant access to 82 publications, in a daily spin through the global news cycle</span>
-                <p> (( Drop-down Menu ~ upper left ~ [ selects News Sources ] ))</p>
+                <p> (( Drop-down Menu ~ upper left ~ [ selects News Sources ] ~ click ~[()]~  More ))</p>
                 <br>
 
           <p><span class="company">Tribute Page</span>
