--- a/resume .html
+++ b/resume .html
@@ -34,10 +34,10 @@
         <!--Name/summary/skills-->
         <h1>Anthony J Ugo</h1>
         <hr size="8px" color="black">
-        <h2> Summary &amp; Skills</h2>
-        <p>Creative, detail oriented and inspired professional with experience in design, retail forms and company logos. Combining a
-                superior aesthetic sensibility with an integral business approach, grounded in full spectrum life experience. A superior artistic imagination
-                augmented with insight based analytical reasoning, woven into a clear communication style.</p>
+        <h2> Summary</h2>
+        <p>Full Stack Web Developer & Certified Scrum Master with a background in communication design. Combining a refined aesthetic
+            sensibility with an integral business approach, grounded in full spectrum life experience. Proficient in multiple frameworks &
+            technologies; adept at acquiring new skills.  Industrious team player inspired by the information age.</p>
        
     <ul id="summaryskills">
 
