Added new database project link

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,6 +90,20 @@
 
                 <br>
 
+                <p><span class="company">Database Showcase</span>
+                  <br>
+                      <span class="place">2020</span>
+                      <br>
+                      <br>
+                      <span class="links"><a href="https://augo10.github.io/Hover-Page/">Github</a></span>
+                      <br>
+                      <br>
+                      <span class="place">Snapshots from MongoDB project + (5) Express REST API + (5) Ionic CMS</span>
+                      <p>(( Hover Over Pictures  ~ [ activate Up close View ] ))</p>
+
+
+              <br>
+
                 <h3><span class="lab"><u>Class Labwork & Exercises</u></span></h3>
                 <br>
 
@@ -103,7 +117,7 @@
                         <br>
                         <br>
                         <span class="place">Colorful Drawing Palette </span>                
-                        <p> (( Use Mouse ~ Choose Shape ~ sidebar ~ [ click inside Canvas to activate Pen ] ))</p>
+                        <p> (( Use Mouse ~ Choose Shape ~ sidebar ~ [ click inside Canvas to activate Pen /|\ refresh (()) Page ] ))</p>
 
                         <br>
 
@@ -141,6 +155,8 @@
             <section id="contact">
         <h2>
             Contact Info
+
+            <p><em><b>anthonyugo@gmail.com</b></em></p>     
         </h2>
         <span class="links"><a href= "https://www.linkedin.com/in/anthony-ugo-4799321a0/">Linkedin</a></span>
         <br>
