--- a/resume .html
+++ b/resume .html
@@ -181,7 +181,7 @@
         <h2>
             Contact Info
         </h2>
-        <p>anthonyugo@gmail.com</p>
+        <p><em><b>anthonyugo@gmail.com</b></em></p>
         <span class="links"><a href= "https://www.linkedin.com/in/anthony-ugo-4799321a0/">Linkedin</a></span>
         <br>
         <br>
