--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
                       <br>
                       <br>
                       <span class="place">Snapshots from MongoDB project + (5) Express REST API + (5) Ionic CMS</span>
-                      <p>(( Hover Over Pictures  ~ [ activate Up close View ] ))</p>
+                      <p>(( Hover Over Pictures  ~ [ activate Up-close View ] ))</p>
 
 
               <br>
