--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
 
                 <br>
 
-                <p><span class="company">Database Showcase</span>
+                <!--<p><span class="company">Database Showcase</span>
                   <br>
                       <span class="place">2020</span>
                       <br>
@@ -99,7 +99,7 @@
                       <br>
                       <br>
                       <span class="place">Snapshots from MongoDB project + (5) Express REST API + (5) Ionic CMS</span>
-                      <p>(( Hover Over Pictures  ~ [ activate Up-close View ] ))</p>
+                      <p>(( Hover Over Pictures  ~ [ activate Up-close View ] ))</p> -->
 
 
               <br>
