added Synth-vorteXt link to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,9 +86,19 @@
                         <br>
                         <span class="place">Assortment of Pictoglyphs & Logos </span>
                         <p> (( Enjoy the show or Click ~ left & right ~ [ activate next Slide ] ))</p>
-
-
                 <br>
+                <br>
+
+                <p><span class="company">Synth-VorteXt</span>
+                  <br>
+                      <span class="place">2020</span>
+                      <br>
+                      <br>
+                      <span class="links"><a href="https://augo10.github.io/Synth-VorteXt/.">Github</a></span>
+                      <br>
+                      <br>
+                      <span class="place">Product Page as Art Concept ~ Interlinked Nav ~ Imaginary Instrument ~ Re-Cord & DeCode MassAgeS</span>
+                      <p> (( Full Field Effect --> Acti\/ate /\ll 3 Generators @ 0nCe [ re-/\/\iX \/olume ] ))</p>
 
                 <!--<p><span class="company">Database Showcase</span>
                   <br>
