Changed portfolio page + adjusted nav bar

--- a/resume .html
+++ b/resume .html
@@ -5,7 +5,7 @@
     <title>A Ugo Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="home page" content="Anthony Ugo">
-    <link rel="stylesheet" type="text/css" href="./dist/css/main.css"> 
+    <link rel="stylesheet" type="text/css" href="dist/css/main.css"> 
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
@@ -15,7 +15,7 @@
             <a id="toggleMenu">Menu<a>
                 <span class="logo"><img src="images/Hypertext Radio Icon .jpg" alt="radio wave" style="max-width: 100%;height: auto;"></span>
                 <nav>
-          <ul>
+          <ul id="menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="resume .html">Resume</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
