Modified portfolio text

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,8 @@
        <!--second menu navbar--> 
        <section id="welcome-section" class="welcome-section">
   <h1>Projects</h1>
-  <p>{} ~ Global Moment(UM)</p>
-     <p>() ~ Media ReMix</p>
+  <p>{} ~ Global MoMent(UM)</p>
+     <p>() ~ Media ReMiX</p>
      <p>[] ~ Mind & /\/\achine</p>
      <p> || ~ /\/\odernist \/irtuaL</p>
 </section> 
