Modified Portfolio pg - deleted synth vortex and carousel links and added ambient folk#

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,10 +35,10 @@
        <!--second menu navbar--> 
        <section id="welcome-section" class="welcome-section">
   <h1>Projects</h1>
-  <p>{} ~ Global MoMent(UM)</p>
-     <p>() ~ Media ReMiX</p>
+  <p>{} ~ Spherical MoMent(UM)</p>
+     <p>() ~ /\/\odernist \/irtua </p>
      <p>[] ~ Mind & /\/\achine</p>
-     <p> || ~ /\/\odernist \/irtuaL</p>
+     <p> </p>
 </section> 
     
       <nav id="navbar" class="nav">
@@ -53,8 +53,6 @@
       <a href="#three">[]</a>
     </li>
     <li>
-      <a href="#four">||</a>
-    </li>
   </ul>
 </nav>
 
@@ -63,15 +61,15 @@
   <h2 class="projects-section-header"></h2>
 
   <div class="projects-grid">
-    <a href="https://master.dwbvarfevsydi.amplifyapp.com/"
+    <a href="ambientfolk.com"
       target="_blank"
       class="project project-tile">
    
       <p class="project-title">
         <span class="code">&lt;</span> -_ { * } _-
         <span class="code">&#47;&gt;</span> 
-      <p> <h3> Global Windows News App (2020)</h3> <h4>Angular-MDB-AWS</h4>
-      Instant access to 82 publications <p>{{ Daily spin through Global News Cycle }}</p>
+      <p> <h3> Ambient Folk.com (2021)</h3> <h4>Music, Art, Text</h4>
+      A project s0 Big it needs it's own Genre</p>
       </p>
     
       </a>
@@ -96,7 +94,7 @@
   <h2 class="projects-section-header"></h2>
 
   <div class="projects-grid">
-    <a href="https://augo10.github.io/Synth-VorteXt/."
+    <!--<a href="https://augo10.github.io/Synth-VorteXt/."
       target="_blank"
       class="project project-tile">
    
@@ -107,7 +105,7 @@
          </p>
       <p><h3>Synth-VorTeXt (2020)</h3><h4>Github</h4> Art Concept ~ Imaginary Instrument ~ Re-Cord & DeCode MassAge<p>
       (( Acti\/ate /\ll 3 Generators @ 0nCe ~ re-/\/\iX \/olume ))</p>
-    </a>
+    </a>-->
     <a
       href="http://cubistgrammar.blogspot.com/"
       target="_blank"
@@ -122,6 +120,22 @@
       <p><h3>Cubist Grammar (2011)</h3><h4>Thinglink</h4> Transforming Images ~ Interactive Surfaces
       <p>Picture as Pun (( Radio Buttons ~ w/in ~ activate HyperLinks ))</p>
     </a>
+
+    <a
+    href="https://codepen.io/cubistgrammar/pen/MWYrgqJ"
+    target="_blank"
+    class="project project-tile"
+  >
+
+    <p class="project-title">
+      <span class="code">&lt;</span>
+      -_ ( # ) _-
+      <span class="code">&#47;&gt;</span>
+    </p>
+    <p><h3>Tribute Page (2019)</h3><h4>CodePen</h4>Modernist styled tribute page celebrating the genius of Jean Gebser<p>
+    // Change View ~ Full Page View //</p>
+  </a>
+
 </section>
   
 <!-- Section three -->
@@ -163,7 +177,7 @@
   <h2 class="projects-section-header"></h2>
 
   <div class="projects-grid">
-    <a href="https://augo10.github.io/bootstrap/"
+    <!--<a href="https://augo10.github.io/bootstrap/"
       target="_blank"
       class="project project-tile">
    
@@ -174,21 +188,8 @@
       </p>
       <p><h3>Carousel (2020)</h3><h4>Github</h4> Assortment of Pictoglyphs & Logos <p> \\ Enjoy show or Click ~ left & right ~ activate next Slide \\</p>           
       </p>
-    </a>
-    <a
-      href="https://codepen.io/cubistgrammar/pen/MWYrgqJ"
-      target="_blank"
-      class="project project-tile"
-    >
- 
-      <p class="project-title">
-        <span class="code">&lt;</span>
-        -_ // _-
-        <span class="code">&#47;&gt;</span>
-      </p>
-      <p><h3>Tribute Page (2019)</h3><h4>CodePen</h4>Modernist styled tribute page celebrating the genius of Jean Gebser<p>
-      // Change View ~ Full Page View //</p>
-    </a>
+    </a>-->
+   
 </section>
        </div>
                 <!--<p><span class="company">Database Showcase</span>
