--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
        <section id="welcome-section" class="welcome-section">
   <h1>Projects</h1>
   <p>{} ~ Spherical MoMent(UM)</p>
-     <p>() ~ /\/\odernist \/irtua </p>
+     <p>() ~ /\/\odernist \/irtual </p>
      <p>[] ~ Mind & /\/\achine</p>
      <p> </p>
 </section> 
@@ -69,7 +69,7 @@
         <span class="code">&lt;</span> -_ { * } _-
         <span class="code">&#47;&gt;</span> 
       <p> <h3> Ambient Folk.com (2021)</h3> <h4>Music, Art, Text</h4>
-      A project s0 Big it needs it's own Genre</p>
+      A project so big it needs its own Genre</p>
       </p>
     
       </a>
