--- a/portfolio.html
+++ b/portfolio.html
@@ -167,8 +167,9 @@
         _- [ = ] -_
         <span class="code">&#47;&gt;</span>
       </p>
-      <p><h3>Game (2020)</h3><h4>Github</h4>Old School Digital Challenge <p>[[ Use Left & Right Arrow keys ~ score on top ~ avoid falling Bits ]]</p>
-</p>
+      <p><h3>Game (2020)</h3><h4>Github</h4>Old School Digital Challenge <p>[[ Use Left & Right Arrow keys ~ score on top ]]</p>
+      // Avoid Falling Bits //
+    </p>
     </a>
 </section>
 
