--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
         <span class="code">&lt;</span>
         _- { * } -_
         <span class="code">&#47;&gt;</span>
-      <p><h3>NASA - APOD (2020)</h3><h4>Github</h4>NASA Photo of the Day <p>{{ Poke Me! ~ button ~ selects random Days }}
+      <p><h3>NASA - APOD (2020)</h3><h4>Github</h4>NASA Photo of the Day <p>{{ Press Here! ~ button ~ selects random Days }}
       </p>
     </a>
   </div>
