changed href in protfolio for ambient folk

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
   <h2 class="projects-section-header"></h2>
 
   <div class="projects-grid">
-    <a href="ambientfolk.com"
+    <a href="https://ambientfolk.com"
       target="_blank"
       class="project project-tile">
    
