--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
         <span class="code">&lt;</span> -_ { * } _-
         <span class="code">&#47;&gt;</span> 
       <p> <h3> Ambient Folk.com (2021)</h3> <h4>Music, Art, Text</h4>
-      A project so big it needs its own Genre</p>
+      Genre, Concept & Context </p>
       </p>
     
       </a>
