--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
       <p class="project-title">
         <span class="code">&lt;</span> -_ { * } _-
         <span class="code">&#47;&gt;</span> 
-      <p> <h3> Ambient Folk.com (2021)</h3> <h4>Music, Art, Text</h4>
+      <p> <h3> Ambient Folk.com (2021)</h3> <h4>Music, Art, Writing</h4>
       Genre, Concept & Context </p>
       </p>
     
