Update resume .html
added italics to ambient folk & masterwork mill job descriptions + included "Present" to timeline

--- a/resume .html
+++ b/resume .html
@@ -61,16 +61,16 @@
         <p><span class="company">Ambient Folk.com</span>
             <br>
         <span class="place">Chicago, IL</span>
-                <span class="year"><i>2021</i></span>
+                <span class="year"><i>2021 - Present</i></span>
                 <br>
                 <span class="job">World Class Music, Art & Writing Project</span></p>
                 
            <div>
                 <ul>
-                    <li>Creative Director: artwork, music, text</li>
-                    <li>Integrated multimedia: web, word, art & music</li>
+                    <li><i>Creative Director: artwork, music, text</i></li>
+                  <li><i>Integrated multimedia: web, word, art & music</i></li>
                 </ul>
-                </div>
+                  </divi>
 
         <p><span class="company">Masterwork Mill</span>
             <br>
@@ -81,11 +81,11 @@
                 
            <div>
                 <ul>
-                    <li>Operation of recording studio</li>
-                    <li>Production, mixing, engineering & mastering of sound recordings</li>
-                    <li>Graphics & logos</li>
-                    <li>Mastering & formating of digital artwork for print</li>
-                    <li>Product marketing &  development</li>
+                  <li><i>Operation of recording studio</i></li>
+                  <li><i>Production, mixing, engineering & mastering of sound recordings</i></li>
+                  <li><i>Graphics & logos</i></li>
+                  <li><i>Mastering & formating of digital artwork for print</i></li>
+                  <li><i>Product marketing &  development</i></li>
                 </ul>
                 </div>
 
